k8s/apps/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: homelab
  labels:
    app.kubernetes.io/name: homelab
    app.kubernetes.io/managed-by: ArgoCD
